# Parallel_Computing_HW

./: .gitignore  README.md  note.md  test.cpp
FFT/: FFT.cu  Freport.md  README.md  fft.exp  fft.lib
Image/: CMakeLists.txt  Ireport.md  gau.py  test.py  testcanny.py
Image/src/: CuImage.cu  CuImage.h  main.cpp
Matrix/: Matrix_openmp.c  Matrix_openmp.cpp  Mreport.md
Optical Flow/: CMakeLists.txt  CMakeLists2.txt  DenseFB.py  FBdisplay.py  README.md  REPORT.md  compute2frameflow.py  extract_frame.py  realtimeof.py  result.txt  seof.py  车道划分.py
Optical Flow/src/: CUfarneback.cu  CUfarneback.h  FBdisplay.cpp  SEfarneback.cpp  SEfarneback.h  detectcar.cpp  main.cpp
Order/: Oreport.md  order_openmp.cpp
